added hover settings and padding to buttons

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="#">Blog</a>
           </li>
           <li>
-            <a class="btn btn-light" href="#"><i class="fas fa-user"></i> Login</a>
+            <a class="btn " href="#"><i class="fas fa-user"></i> Login</a>
           </li>
           
         </ul>
